sumo/tests/dfrouter/errors/false_output_directory/errors.dfrouter
Error: Can not write to file 'invalid/emitters.add.xml'.
Quitting (on error).
